# HydraMPP

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  setup.cfg
lib/: __init__.py  client.py  host.py  log.py  net.py
test/: hydra-test.py
