[metadata]
name = hydraMPP
version = 0.0.1
url = https://github.com/raw-lab/hydraMPP
author = Jose L. Figueroa III
author_email = jlfiguer@charlotte.edu
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: Unix
license = BSD License
description = A simple class for Distributed Computing
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
platforms = Unix

[options]
install_requires =
    setuptools

python_requires = >=3.0
packages = hydraMPP

package_dir = 
    hydraMPP=lib
